--- a/bfd/Makefile.in
+++ b/bfd/Makefile.in
@@ -180,7 +180,7 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(bfdlibdir)" "$(DESTDIR)$(infodir)" \
 	"$(DESTDIR)$(bfdincludedir)"
-LTLIBRARIES = $(bfdlib_LTLIBRARIES) $(noinst_LTLIBRARIES) $(loaderlib_LTLIBRARIES)
+LTLIBRARIES = $(bfdlib_LTLIBRARIES) $(noinst_LTLIBRARIES)
 am__DEPENDENCIES_1 =
 am__objects_1 = archive.lo archures.lo bfd.lo bfdio.lo bfdwin.lo \
 	cache.lo coff-bfd.lo compress.lo corefile.lo elf-properties.lo \
@@ -190,9 +190,6 @@ am__objects_1 = archive.lo archures.lo bfd.lo bfdio.lo bfdwin.lo \
 	verilog.lo
 am_libbfd_la_OBJECTS = $(am__objects_1)
 libbfd_la_OBJECTS = $(am_libbfd_la_OBJECTS)
-am__objects_2 = $(ELF_LOADER_BACKENDS)
-am_libloader_la_OBJECTS = $(am__objects_2)
-libloader_la_OBJECTS = $(am_libloader_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -202,11 +199,6 @@ libbfd_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(libbfd_la_LDFLAGS) $(LDFLAGS) -o $@
 @INSTALL_LIBBFD_FALSE@am_libbfd_la_rpath =
 @INSTALL_LIBBFD_TRUE@am_libbfd_la_rpath = -rpath $(bfdlibdir)
-libloader_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
-	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
-	$(libloader_la_LDFLAGS) $(LDFLAGS) -o $@
-@INSTALL_LIBBFD_FALSE@am_libloader_la_rpath =
-@INSTALL_LIBBFD_TRUE@am_libloader_la_rpath = -rpath $(bfdlibdir)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -516,9 +508,8 @@ bfddocdir = doc
 libbfd_la_LDFLAGS = $(am__append_1) -release `cat libtool-soversion` \
 	@SHARED_LDFLAGS@ $(am__empty)
 @INSTALL_LIBBFD_TRUE@bfdlib_LTLIBRARIES = libbfd.la
-@INSTALL_LIBBFD_TRUE@loaderlib_LTLIBRARIES = libloader.la
 @INSTALL_LIBBFD_FALSE@bfdinclude_HEADERS = $(am__append_2)
-@INSTALL_LIBBFD_TRUE@bfdinclude_HEADERS = $(BFD_H) read_elf.h reloc_sections.h \
+@INSTALL_LIBBFD_TRUE@bfdinclude_HEADERS = $(BFD_H) \
 @INSTALL_LIBBFD_TRUE@	$(INCDIR)/ansidecl.h $(INCDIR)/symcat.h \
 @INSTALL_LIBBFD_TRUE@	$(INCDIR)/diagnostics.h \
 @INSTALL_LIBBFD_TRUE@	$(INCDIR)/bfdlink.h $(am__append_2)
@@ -1118,15 +1109,6 @@ OPTIONAL_BACKENDS_CFILES = \
 	sco5-core.c \
 	trad-core.c
 
-ELF_LOADER_BACKENDS = \
-	read_elf.lo \
-	load_sections.lo \
-        reloc_sections.lo
- 
-ELF_LOADER_BACKENDS_CFILES = \
-	read_elf.c \
-	load_sections.c \
-        reloc_sections.c
 
 # Reconfigure if config.bfd or configure.host changes.
 # development.sh is used to determine -Werror default.
@@ -1138,7 +1120,7 @@ CONFIG_STATUS_DEPENDENCIES = \
 
 # These are defined by configure:
 WORDSIZE = @wordsize@
-ALL_BACKENDS = @all_backends@ $(ELF_LOADER_BACKENDS)
+ALL_BACKENDS = @all_backends@
 BFD_BACKENDS = @bfd_backends@
 BFD_MACHINES = @bfd_machines@
 TDEFAULTS = @tdefaults@
@@ -1151,8 +1133,7 @@ SOURCE_CFILES = \
 	$(ALL_MACHINES_CFILES) \
 	$(BFD32_BACKENDS_CFILES) \
 	$(BFD64_BACKENDS_CFILES) \
-	$(OPTIONAL_BACKENDS_CFILES) \
-	$(ELF_LOADER_BACKENDS_CFILES)
+	$(OPTIONAL_BACKENDS_CFILES)
 
 BUILD_CFILES = \
 	elf32-aarch64.c elf64-aarch64.c \
@@ -1186,7 +1167,7 @@ SOURCE_HFILES = \
 	som.h sysdep.h \
 	version.h vms.h \
 	wasm-module.h \
-	xcofflink.h xsym.h read_elf.h reloc_sections.h
+	xcofflink.h xsym.h
 
 BUILD_HFILES = \
 	bfdver.h elf32-target.h elf64-target.h targmatch.h
@@ -1205,7 +1186,7 @@ BLD_POTFILES = $(BUILD_CFILES) $(BUILD_HFILES)
 # BFD_MACHINES	Architecture-specific routines the configured targets need.
 # COREFILE	Core file routines for a native configuration
 # bfd64_libs	Routines for 64bit support
-OFILES = $(BFD_BACKENDS) $(BFD_MACHINES) @COREFILE@ @bfd64_libs@ $(ELF_LOADER_BACKENDS)
+OFILES = $(BFD_BACKENDS) $(BFD_MACHINES) @COREFILE@ @bfd64_libs@
 
 # Since BFD64_LIBS is optional and we can't have substitution in
 # libbfd_la_SOURCES, we put BFD64_LIBS in OFILES instead.
@@ -1433,41 +1414,6 @@ clean-bfdlibLTLIBRARIES:
 	  rm -f $${locs}; \
 	}
 
-install-loaderlibLTLIBRARIES: $(loaderlib_LTLIBRARIES)
-	@$(NORMAL_INSTALL)
-	@list='$(loaderlib_LTLIBRARIES)'; test -n "$(bfdlibdir)" || list=; \
-	list2=; for p in $$list; do \
-	  if test -f $$p; then \
-	    list2="$$list2 $$p"; \
-	  else :; fi; \
-	done; \
-	test -z "$$list2" || { \
-	  echo " $(MKDIR_P) '$(DESTDIR)$(bfdlibdir)'"; \
-	  $(MKDIR_P) "$(DESTDIR)$(bfdlibdir)" || exit 1; \
-	  echo " $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$list2 '$(DESTDIR)$(bfdlibdir)'"; \
-	  $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$list2 "$(DESTDIR)$(bfdlibdir)"; \
-	}
-
-uninstall-loaderlibLTLIBRARIES:
-	@$(NORMAL_UNINSTALL)
-	@list='$(loaderlib_LTLIBRARIES)'; test -n "$(bfdlibdir)" || list=; \
-	for p in $$list; do \
-	  $(am__strip_dir) \
-	  echo " $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=uninstall rm -f '$(DESTDIR)$(bfdlibdir)/$$f'"; \
-	  $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=uninstall rm -f "$(DESTDIR)$(bfdlibdir)/$$f"; \
-	done
-
-clean-loaderlibLTLIBRARIES:
-	-test -z "$(loaderlib_LTLIBRARIES)" || rm -f $(loaderlib_LTLIBRARIES)
-	@list='$(loaderlib_LTLIBRARIES)'; \
-	locs=`for p in $$list; do echo $$p; done | \
-	      sed 's|^[^/]*$$|.|; s|/[^/]*$$||; s|$$|/so_locations|' | \
-	      sort -u`; \
-	test -z "$$locs" || { \
-	  echo rm -f $${locs}; \
-	  rm -f $${locs}; \
-	}
-
 clean-noinstLTLIBRARIES:
 	-test -z "$(noinst_LTLIBRARIES)" || rm -f $(noinst_LTLIBRARIES)
 	@list='$(noinst_LTLIBRARIES)'; \
@@ -1481,9 +1427,6 @@ clean-noinstLTLIBRARIES:
 
 libbfd.la: $(libbfd_la_OBJECTS) $(libbfd_la_DEPENDENCIES) $(EXTRA_libbfd_la_DEPENDENCIES) 
 	$(AM_V_CCLD)$(libbfd_la_LINK) $(am_libbfd_la_rpath) $(libbfd_la_OBJECTS) $(libbfd_la_LIBADD) $(LIBS)
-
-libloader.la: $(libloader_la_OBJECTS)
-	+ $(AM_V_CCLD)$(libloader_la_LINK) $(am_libloader_la_rpath) $(libloader_la_OBJECTS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -2133,7 +2076,7 @@ maintainer-clean-generic:
 	-test -z "$(MAINTAINERCLEANFILES)" || rm -f $(MAINTAINERCLEANFILES)
 clean: clean-recursive
 
-clean-am: clean-aminfo clean-bfdlibLTLIBRARIES clean-loaderlibLTLIBRARIES clean-generic \
+clean-am: clean-aminfo clean-bfdlibLTLIBRARIES clean-generic \
 	clean-libtool clean-noinstLIBRARIES clean-noinstLTLIBRARIES \
 	mostlyclean-am
 
@@ -2156,7 +2099,7 @@ info: info-recursive
 
 info-am: $(INFO_DEPS)
 
-install-data-am: install-bfdincludeHEADERS install-bfdlibLTLIBRARIES install-loaderlibLTLIBRARIES \
+install-data-am: install-bfdincludeHEADERS install-bfdlibLTLIBRARIES \
 	install-info-am
 
 install-dvi: install-dvi-recursive
@@ -2298,7 +2241,6 @@ ps: ps-recursive
 ps-am: $(PSS)
 
 uninstall-am: uninstall-bfdincludeHEADERS uninstall-bfdlibLTLIBRARIES \
-        uninstall-loaderlibLTLIBRARIES \
 	uninstall-dvi-am uninstall-html-am uninstall-info-am \
 	uninstall-pdf-am uninstall-ps-am
 
@@ -2307,13 +2249,13 @@ uninstall-am: uninstall-bfdincludeHEADERS uninstall-bfdlibLTLIBRARIES \
 
 .PHONY: $(am__recursive_targets) CTAGS GTAGS TAGS all all-am \
 	am--refresh check check-am clean clean-aminfo \
-	clean-bfdlibLTLIBRARIES clean-loaderlibLTLIBRARIES clean-cscope clean-generic \
+	clean-bfdlibLTLIBRARIES clean-cscope clean-generic \
 	clean-libtool clean-noinstLIBRARIES clean-noinstLTLIBRARIES \
 	cscope cscopelist-am ctags ctags-am dist-info distclean \
 	distclean-compile distclean-generic distclean-hdr \
 	distclean-libtool distclean-tags dvi dvi-am html html-am \
 	html-local info info-am install install-am \
-	install-bfdincludeHEADERS install-bfdlibLTLIBRARIES install-loaderlibLTLIBRARIES \
+	install-bfdincludeHEADERS install-bfdlibLTLIBRARIES \
 	install-data install-data-am install-dvi install-dvi-am \
 	install-exec install-exec-am install-html install-html-am \
 	install-info install-info-am install-man install-pdf \
@@ -2323,7 +2265,7 @@ uninstall-am: uninstall-bfdincludeHEADERS uninstall-bfdlibLTLIBRARIES \
 	maintainer-clean-generic mostlyclean mostlyclean-aminfo \
 	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
 	pdf pdf-am ps ps-am tags tags-am uninstall uninstall-am \
-	uninstall-bfdincludeHEADERS uninstall-bfdlibLTLIBRARIES uninstall-loaderlibLTLIBRARIES \
+	uninstall-bfdincludeHEADERS uninstall-bfdlibLTLIBRARIES \
 	uninstall-dvi-am uninstall-html-am uninstall-info-am \
 	uninstall-pdf-am uninstall-ps-am
 
