Update non-config binutils 2_39_0 differences

--- a/libbacktrace/Makefile.in
+++ b/libbacktrace/Makefile.in
@@ -972,7 +972,7 @@ VIEW_FILES = \
 
 ALLOC_FILES = \
 	alloc.c \
-	mmap.c
+	mmap.c allocfail.sh
 
 EXTRA_libbacktrace_la_SOURCES = \
 	$(BACKTRACE_FILES) \
